Cleanup ActivityFetcherTest